--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "with-styled-components",
+  "name": "latino-americav2",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "alt-port": "npm run dev -- -p 3005"
   },
   "dependencies": {
     "next": "latest",
@@ -14,7 +16,13 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.8.0"
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-styled-components": "^1.8.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "mutationobserver-shim": "^0.3.7"
   },
   "license": "MIT"
 }
