form almost functional

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-hook-form": "^7.3.6",
     "react-is": "^16.8.0",
     "styled-components": "^5.0.0"
   },
