--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "query-string": "^7.0.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-hook-form": "^7.3.6",
