--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "next": "^11.0.0",
     "next-i18next": "^8.6.0",
+    "notistack": "^2.0.3",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-hook-form": "^7.3.6",
