--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "next": "^11.0.0",
+    "next-auth": "^3.29.0",
     "next-i18next": "^8.6.0",
     "notistack": "^2.0.3",
     "react": "^16.8.0",
