--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.8.0",
     "react-hook-form": "^7.3.6",
     "react-is": "^16.8.0",
+    "react-query": "^3.33.7",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
