--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "format": "eslint --fix \"src/**/*.js\""
   },
   "keywords": [],
   "author": "",
@@ -22,5 +23,13 @@
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.12",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "2.5.0"
   }
 }
