--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,12 @@
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
     "next-i18next": "^8.10.0",
-    "notistack": "^2.0.3",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-hook-form": "^7.20.5",
     "react-is": "^16.8.0",
     "react-query": "^3.34.0",
+    "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
