--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.4.5",
+    "aws-sdk": "^2.1046.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -20,6 +21,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.0",
     "mongoose-validator": "^2.1.0",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.12",
     "request": "^2.88.0"
