--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
     "mongoose": "^5.6.0",
     "mongoose-validator": "^2.1.0",
     "multer": "^1.4.4",
