--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-is": "^16.8.0",
     "react-query": "^3.34.0",
     "react-toastify": "^8.1.0",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
