--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,21 +12,23 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "next": "^11.1.2",
+    "next": "^11.1.3",
     "next-auth": "^3.29.0",
     "next-i18next": "^8.10.0",
+    "node-fetch": "^3.2.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-dropzone": "^11.4.2",
-    "react-hook-form": "^7.20.5",
+    "react-dropzone": "^11.5.1",
+    "react-hook-form": "^7.25.0",
     "react-is": "^16.8.0",
-    "react-query": "^3.34.0",
+    "react-query": "^3.34.12",
+    "react-spring": "^9.4.2",
     "react-toastify": "^8.1.0",
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "^1.13.3",
