--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "next": "^11.1.3",
+    "luxon": "^2.3.1",
+    "next": "^12.1.1",
     "next-auth": "^3.29.0",
     "next-i18next": "^8.10.0",
     "node-fetch": "^3.2.0",
