--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "latino-americav2",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 3005",
     "build": "next build",
     "start": "next start",
     "test": "jest",
