--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@vercel/analytics": "^0.1.8",
     "lodash": "^4.17.21",
     "luxon": "^2.3.1",
     "next": "^12.1.1",
