--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
