--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@vercel/analytics": "^0.1.8",
+    "apexcharts": "^3.37.1",
     "lodash": "^4.17.21",
     "luxon": "^2.3.1",
     "next": "^12.1.1",
