--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-toastify": "^8.1.0",
     "react-tooltip": "^4.2.21",
     "recharts": "^2.4.2",
+    "sharp": "^0.32.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
