--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "alt-port": "npm run dev -- -p 3005"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
