--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,10 +1,11 @@
 {
   "extends": "next/core-web-vitals", 
-  "sort-imports": ["error", {
+  "rules": {
+    "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }], 
+    "sort-imports": ["warn", {
       "ignoreCase": false,
       "ignoreDeclarationSort": false,
-      "ignoreMemberSort": false,
-      "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
-      "allowSeparatedGroups": false
+      "ignoreMemberSort": false
   }]
+}
 }
