--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,11 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "alt-port": "npm run dev -- -p 3005",
+    "alt-port": "yarn run dev -- -p 3005",
     "lint": "next lint --fix",
     "prepare": "cd .. && husky install frontend/.husky", 
-    "pre-commit-lint": "npm run lint-staged",
-    "lint-staged": {
-      "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
-    },
-    "lint:write": "next lint --cache --fix"
+    "pre-commit-lint": "yarn run lint-staged",
+    "lint-staged": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
