--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "babel-plugin-styled-components": "^1.13.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
