--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@mui/system": "^5.12.3",
     "@vercel/analytics": "^0.1.8",
     "apexcharts": "^3.37.1",
+    "eslint-plugin-react": "^7.32.2",
     "lodash": "^4.17.21",
     "luxon": "^2.3.1",
     "next": "^12.1.1",
