--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+  "plugins": ["simple-import-sort"],
   "extends": ["next", "next/core-web-vitals", "prettier"],
   "rules": {
     "no-unused-vars": [
@@ -9,20 +10,6 @@
         "ignoreRestSiblings": false
       }
     ],
-    "sort-imports": [
-      "error",
-      {
-        "ignoreCase": true,
-        "ignoreDeclarationSort": false,
-        "ignoreMemberSort": true,
-        "allowSeparatedGroups": true,
-        "memberSyntaxSortOrder": [
-          "none",
-          "all",
-          "multiple",
-          "single"
-        ]
-      }
-    ]
+    "simple-import-sort/imports": "error"
   }
 }
