--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
