--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -10,6 +10,9 @@
         "ignoreRestSiblings": false
       }
     ],
-    "simple-import-sort/imports": "error"
+    "simple-import-sort/imports": "error", 
+    "no-restricted-imports": [
+      "error"
+    ]
   }
 }
