--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "node-fetch": "^3.2.0",
     "react": "^16.8.0",
     "react-apexcharts": "^1.4.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^16.8.0",
     "react-dropzone": "^11.5.1",
     "react-hook-form": "^7.25.0",
