--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,15 +15,15 @@
     "lint-staged": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.0",
-    "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/cache": "latest",
+    "@emotion/react": "latest",
+    "@emotion/server": "latest",
+    "@emotion/styled": "latest",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.5",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/system": "^5.12.3",
     "@vercel/analytics": "^0.1.8",
