--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,14 +31,14 @@
     "eslint-plugin-react": "^7.32.2",
     "lodash": "^4.17.21",
     "luxon": "^2.3.1",
-    "next": "^12.1.1",
+    "next": "latest",
     "next-auth": "^3.29.0",
     "next-i18next": "^8.10.0",
     "node-fetch": "^3.2.0",
-    "react": "^16.8.0",
+    "react": "latest",
     "react-apexcharts": "^1.4.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "^16.8.0",
+    "react-dom": "latest",
     "react-dropzone": "^11.5.1",
     "react-hook-form": "^7.25.0",
     "react-is": "^16.8.0",
