--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/styles": "^5.14.1",
     "@mui/system": "^5.12.3",
     "@vercel/analytics": "^0.1.8",
     "apexcharts": "^3.37.1",
