--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@vercel/analytics": "^0.1.8",
     "apexcharts": "^3.37.1",
     "eslint-plugin-react": "^7.32.2",
+    "express": "^4.18.2",
     "lodash": "^4.17.21",
     "luxon": "^2.3.1",
     "next": "latest",
