--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "todo-app-backend",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
@@ -12,9 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.529.0",
     "@google-cloud/translate": "^7.0.5",
     "@sendgrid/mail": "^7.4.5",
-    "aws-sdk": "^2.1046.0",
+    "aws-sdk": "^2.1573.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -22,6 +24,7 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
+    "fast-xml-parser": "^4.3.5",
     "mongoose": "^5.6.0",
     "mongoose-validator": "^2.1.0",
     "multer": "^1.4.4",
