--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@mui/system": "^5.12.3",
     "@vercel/analytics": "^0.1.8",
     "apexcharts": "^3.37.1",
+    "axios": "^1.7.2",
     "eslint-plugin-react": "^7.32.2",
     "lodash": "^4.17.21",
     "luxon": "^2.3.1",
