--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,7 +65,8 @@
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
-    "mutationobserver-shim": "^0.3.7"
+    "mutationobserver-shim": "^0.3.7",
+    "prettier": "^3.3.3"
   },
   "license": "MIT"
 }
