--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,10 @@
     "test": "jest",
     "alt-port": "yarn run dev -- -p 3005",
     "lint": "next lint --fix",
-    "lint:fix": "npm run lint -- --fix",
+    "lint:fix": "yarn run lint -- --fix",
     "pre-commit-lint": "yarn run lint-staged",
     "prepare": "cd .. && husky install frontend/.husky",
-    "prettier:fix": "npx prettier 'src/**/*.{js,ts,mjs,cjs,json}' --write",
+    "prettier:fix": "yarn run prettier 'src/**/*.{js,ts,mjs,cjs,json}' --write",
     "lint-staged": "next lint"
   },
   "dependencies": {
