--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -10,9 +10,7 @@
         "ignoreRestSiblings": false
       }
     ],
-    "simple-import-sort/imports": "error", 
-    "no-restricted-imports": [
-      "error"
-    ]
+    "simple-import-sort/imports": "error",
+    "no-restricted-imports": ["error"]
   }
 }
