--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
+    "@typescript-eslint/parser": "^8.32.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "^1.13.3",
     "eslint": "8.40.0",
@@ -66,7 +67,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "mutationobserver-shim": "^0.3.7",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.8.3"
   },
   "license": "MIT"
 }
