--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -112,7 +112,8 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["./src/**/*", "./src/**/*.json"]
+  "include": ["./src/**/*", "./src/**/*.json"],
+  "exclude": ["./node_modules", "./dist"]
   // "tsx": {
   //   "require": ["tsconfig-paths/register"]
   // }
