--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,13 @@
   "name": "todo-app-backend",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.ts",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node dist/index.js",
     "dev": "nodemon",
     "format": "eslint --fix \"src/**/*.js\"",
-    "build": "npx tsc && tsc-alias",
-    "postinstall": "npm run build"
+    "build": "tsc && tsup"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +26,8 @@
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "fast-xml-parser": "^4.3.5",
-    "mongoose": "^8.14.3",
+    "module-alias": "^2.2.3",
+    "mongoose": "^5.6.0",
     "mongoose-validator": "^2.1.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
+    "@types/module-alias": "^2.0.4",
     "@types/node": "^22.15.17",
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -47,10 +49,26 @@
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
+    "tsup": "^8.5.0",
     "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.3"
   },
-  "engines": {
-    "node": "20.x"
+  "tsup": {
+    "entry": [
+      "src/index.ts"
+    ],
+    "outDir": "dist",
+    "format": [
+      "esm",
+      "cjs"
+    ],
+    "target": "es2020",
+    "sourcemap": true,
+    "clean": true,
+    "dts": true,
+    "splitting": false,
+    "skipNodeModulesBundle": true
   }
 }
